force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Paiement affecté à une facture.</description>
    <label>Paiement</label>
    <nameField>
        <displayFormat>PAY-{000000}</displayFormat>
        <label>Numéro de paiement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paiements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>