force-app/main/default/objects/Payment__c/fields/Amount__c.field-meta.xml
<CustomField><fullName>Amount__c</fullName><label>Montant</label><precision>18</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>