force-app/main/default/objects/Payment__c/fields/Invoice__c.field-meta.xml
<CustomField><fullName>Invoice__c</fullName><label>Facture</label><referenceTo>Invoice__c</referenceTo><relationshipLabel>Paiements</relationshipLabel><relationshipName>Payments</relationshipName><relationshipOrder>0</relationshipOrder><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>