force-app/main/default/objects/Payment__c/fields/Method__c.field-meta.xml
<CustomField><fullName>Method__c</fullName><label>Moyen de paiement</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>BankTransfer</fullName><default>true</default><label>Virement</label></value><value><fullName>Card</fullName><default>false</default><label>Carte</label></value><value><fullName>Cheque</fullName><default>false</default><label>Chèque</label></value><value><fullName>Cash</fullName><default>false</default><label>Espèces</label></value><value><fullName>Other</fullName><default>false</default><label>Autre</label></value></valueSetDefinition></valueSet></CustomField>