force-app/main/default/objects/Payment__c/fields/PaymentDate__c.field-meta.xml
<CustomField><fullName>PaymentDate__c</fullName><defaultValue>TODAY()</defaultValue><label>Date du paiement</label><required>true</required><type>Date</type></CustomField>