force-app/main/default/objects/Payment__c/fields/Reference__c.field-meta.xml
<CustomField><fullName>Reference__c</fullName><label>Référence</label><length>100</length><required>false</required><type>Text</type></CustomField>